Consolidate node edition modes into single NodeEditionMode class (R2)
  Replace three identical subclasses (ChanceNodeEditionMode,
  DecisionNodeEditionMode, UtilityNodeEditionMode) with a single
  NodeEditionMode parameterized by NodeType. EditionModeManager now
  registers node-creation modes programmatically via a descriptor table
  instead of relying on per-type subclasses discovered by reflection.