@@ -21,12 +21,13 @@ import java.util.HashSet;
 import java.util.List;
 
 /**
- * Abstract base edition mode for creating nodes. Subclasses specify the
- * {@link org.openmarkov.core.model.network.NodeType} (chance, decision, utility).
+ * Edition mode for creating nodes of a given {@link NodeType}.
+ * One instance per node type is registered in {@link EditionModeManager};
+ * there is no need for per-type subclasses.
  */
-public abstract class NodeEditionMode extends EditionMode {
+public class NodeEditionMode extends EditionMode {
     private final NodeType nodeType;
-    
+
     public NodeEditionMode(NetworkEditorPanel networkEditorPanel, ProbNet probNet, NodeType nodeType) {
         super(networkEditorPanel, probNet);
         this.nodeType = nodeType;
@@ -41,7 +42,7 @@ public abstract class NodeEditionMode extends EditionMode {
             return;
         }
         probNet.getPNESupport().setWithUndo(true);
-        HashSet<String> existingNames = new HashSet<String>();
+        HashSet<String> existingNames = new HashSet<>();
         for (Node node : probNet.getNodes()) {
             String name = node.getName();
             if (name.contains("[")) {
@@ -63,7 +64,7 @@ public abstract class NodeEditionMode extends EditionMode {
         }
         List<Criterion> decisionCriteria = probNet.getDecisionCriteria();
         if (nodeType == NodeType.UTILITY && decisionCriteria != null) {
-            variable.setDecisionCriterion(decisionCriteria.get(0));
+            variable.setDecisionCriterion(decisionCriteria.getFirst());
         }
         
         AddNodeEdit addNodeEdit = new AddNodeEdit(probNet, variable, nodeType, position);
